# packages/ccdi-models/src/subject/metadata/builder.rs
@@ -1,26 +1,22 @@
 //! A builder for [`Metadata`].
 
 use crate::metadata::field;
-use crate::metadata::field::EthnicityOrNull;
-use crate::metadata::field::IdentifiersOrNull;
-use crate::metadata::field::RacesOrNull;
-use crate::metadata::field::SexOrNull;
 use crate::subject::Metadata;
 
 /// A builder for [`Metadata`].
 #[derive(Clone, Debug, Default)]
 pub struct Builder {
     /// The sex of the subject.
-    sex: Option<field::unowned::Sex>,
+    sex: Option<field::Sex>,
 
     /// The race of the subject.
-    race: Option<Vec<field::unowned::Race>>,
+    race: Option<Vec<field::Race>>,
 
     /// The ethnicity of the subject.
-    ethnicity: Option<field::unowned::Ethnicity>,
+    ethnicity: Option<field::Ethnicity>,
 
     /// The identifiers for the subject.
-    identifiers: Option<Vec<field::owned::Identifier>>,
+    identifiers: Option<Vec<field::Identifier>>,
 }
 
 impl Builder {
@@ -32,13 +28,13 @@ impl Builder {
     /// use ccdi_cde as cde;
     /// use ccdi_models as models;
     ///
-    /// use models::metadata::field::unowned::Sex;
+    /// use models::metadata::field::Sex;
     /// use models::subject::metadata::Builder;
     ///
     /// let field = Sex::new(cde::v1::Sex::Unknown, None, None);
     /// let builder = Builder::default().sex(field);
     /// ```
-    pub fn sex(mut self, sex: field::unowned::Sex) -> Self {
+    pub fn sex(mut self, sex: field::Sex) -> Self {
         self.sex = Some(sex);
         self
     }
@@ -51,13 +47,13 @@ impl Builder {
     /// use ccdi_cde as cde;
     /// use ccdi_models as models;
     ///
-    /// use models::metadata::field::unowned::Race;
+    /// use models::metadata::field::Race;
     /// use models::subject::metadata::Builder;
     ///
     /// let field = Race::new(cde::v1::Race::Unknown, None, None);
     /// let builder = Builder::default().append_race(field);
     /// ```
-    pub fn append_race(mut self, race: field::unowned::Race) -> Self {
+    pub fn append_race(mut self, race: field::Race) -> Self {
         let mut inner = self.race.unwrap_or_default();
         inner.push(race);
 
@@ -74,13 +70,13 @@ impl Builder {
     /// use ccdi_cde as cde;
     /// use ccdi_models as models;
     ///
-    /// use models::metadata::field::unowned::Ethnicity;
+    /// use models::metadata::field::Ethnicity;
     /// use models::subject::metadata::Builder;
     ///
     /// let field = Ethnicity::new(cde::v2::Ethnicity::Unknown, None, None);
     /// let builder = Builder::default().ethnicity(field);
     /// ```
-    pub fn ethnicity(mut self, ethnicity: field::unowned::Ethnicity) -> Self {
+    pub fn ethnicity(mut self, ethnicity: field::Ethnicity) -> Self {
         self.ethnicity = Some(ethnicity);
         self
     }
@@ -93,7 +89,7 @@ impl Builder {
     /// use ccdi_cde as cde;
     /// use ccdi_models as models;
     ///
-    /// use models::metadata::field::owned::Identifier;
+    /// use models::metadata::field::Identifier;
     /// use models::subject::metadata::Builder;
     ///
     /// let field = Identifier::new(
@@ -107,7 +103,7 @@ impl Builder {
     ///
     /// # Ok::<(), Box<dyn std::error::Error>>(())
     /// ```
-    pub fn append_identifier(mut self, identifier: field::owned::Identifier) -> Self {
+    pub fn append_identifier(mut self, identifier: field::Identifier) -> Self {
         let mut inner = self.identifiers.unwrap_or_default();
         inner.push(identifier);
 
@@ -128,28 +124,11 @@ impl Builder {
     /// let builder = Builder::default();
     /// ```
     pub fn build(self) -> Metadata {
-        let sex = self.sex.map(SexOrNull::Unowned).unwrap_or(SexOrNull::Null);
-
-        let race = self
-            .race
-            .map(RacesOrNull::MultipleUnowned)
-            .unwrap_or(RacesOrNull::Null);
-
-        let ethnicity = self
-            .ethnicity
-            .map(EthnicityOrNull::Unowned)
-            .unwrap_or(EthnicityOrNull::Null);
-
-        let identifiers = self
-            .identifiers
-            .map(IdentifiersOrNull::MultipleOwned)
-            .unwrap_or(IdentifiersOrNull::Null);
-
         Metadata {
-            sex,
-            race,
-            ethnicity,
-            identifiers,
+            sex: self.sex,
+            race: self.race,
+            ethnicity: self.ethnicity,
+            identifiers: self.identifiers,
         }
     }
 }
